--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^3.0.0",
-    "micro-bot": "^1.3.0"
+    "micro-bot": "^1.3.0",
+    "telegraf-i18n": "^5.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
