--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "debug": "^3.0.0",
     "micro-bot": "^1.3.0",
+    "node-fetch": "^1.7.2",
     "telegraf-i18n": "^5.0.2"
   },
   "devDependencies": {
