--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^3.0.0",
+    "fuse.js": "^3.0.5",
     "micro-bot": "^1.3.0",
     "node-fetch": "^1.7.2",
     "telegraf-i18n": "^5.0.2"
