--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "engines": {
     "node": ">=8.5.0"
   },
+  "now": {
+    "scale": {
+      "bru1": {
+        "min": 1,
+        "max": 1
+      }
+    }
+  },
   "author": "bananium authors",
   "license": "MIT",
   "dependencies": {
