--- a/package.json
+++ b/package.json
@@ -7,44 +7,33 @@
     "url": "git+ssh://git@github.com/bananiumbot/bot",
     "type": "git"
   },
-  "main": "index.js",
   "scripts": {
-    "dev": "supervisor -x micro-bot index.js",
-    "deploy": "now -e NODE_ENV=production -e BOT_TOKEN=$BOT_TOKEN --token $NOW_TOKEN --npm --public",
+    "dev": "supervisor -x telegraf index.js",
     "lint": "eslint .",
     "precommit": "npm test",
-    "start": "micro-bot -d ${NOW_URL}",
     "test": "npm run lint"
   },
   "engines": {
-    "node": ">=8.5.0"
-  },
-  "now": {
-    "scale": {
-      "bru1": {
-        "min": 1,
-        "max": 1
-      }
-    }
+    "node": "12.x"
   },
   "author": "bananium authors",
   "license": "MIT",
   "dependencies": {
     "debug": "^4.1.1",
-    "fuse.js": "^3.4.5",
-    "micro-bot": "^2.5.3",
+    "fuse.js": "^6.4.1",
     "node-fetch": "^2.6.0",
+    "telegraf": "^3.38.0",
     "telegraf-i18n": "^6.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint": "^7.7.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^1.3.1",
+    "husky": "^4.2.5",
     "supervisor": "^0.12.0"
   }
 }
